Update catalog app + new rest endpoint (v.1.1)
